--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
-    <color name="transparentBlack">#80000000</color>
+    <color name="colorPrimary">#03DAC5</color>
+    <color name="colorPrimaryDark">@android:color/transparent</color>
+    <color name="colorAccent">#BB86FC</color>
+    <color name="background">#2A2A2A</color>
+
+    <color name="textHighEmphasis">#DEFFFFFF</color>
+    <color name="textMediumEmphasis">#99FFFFFF</color>
 </resources>
