--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -72,7 +72,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:text="@string/start"
+            android:enabled="false"
+            android:text="@string/render"
             tools:ignore="RelativeOverlap" />
 
     </RelativeLayout>
